# ParallelProgramming

./: CMakeLists.txt  machinet.conf
com.fee.omp/: OMP_Workshare_1.c
com.fee.openmp/: OMP_Workshare.c  OMP_orphan.c
